<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorWhite"
              android:orientation="vertical"
              android:paddingTop="100dp"
              tools:context=".addItem.AddItemActivity">

    <EditText
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        android:inputType="text"
        android:maxLength="20"/>

    <EditText
        android:id="@+id/itemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_price"
        android:maxLength="6"
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/isImported"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="5dp"
            android:text="@string/item_imported"/>

        <CheckBox
            android:id="@+id/isExempted"
            android:paddingRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/item_exempted"/>
    </LinearLayout>
</LinearLayout>