<resources>
    <string name="app_name">Tax Problem</string>
    <string name="title_activity_add_item">Add Shopping Item</string>
    <string name="title_activity_basket">Receipt</string>
    <string name="item_exempted">is Excempted</string>
    <string name="item_imported">is Imported</string>
    <string name="item_name">Enter Item Name</string>
    <string name="item_price">Enter Item Price</string>
    <string name="action_settings">Settings</string>
    <string name="total_sales_tax">Total Sales Tax</string>
    <string name="total_price">Total Price</string>
    <string name="shopping_items">Shopping Items</string>
    <string name="missing_fields">Item Name and Item Price can not be blank.</string>
    <string name="add_shopping_item">Add Shopping Item</string>
    <string name="check_out">Check Out</string>
    <string name="plus_sign">plus sign</string>
</resources>
