<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.ndandey.app.taxproblem.checkout.BasketActivity">
    <item
        android:id="@+id/action_save"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always|collapseActionView"/>
</menu>
