...
                    android:paddingLeft="20dp"
                    android:textStyle="bold"
                    android:text="@string/total_sales_tax"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/totalSalesTaxValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:textSize="18sp"/>
...
                    android:paddingLeft="20dp"
                    android:text="@string/total_price"
                    android:textSize="18dp"
                    />

                <TextView
                    android:id="@+id/totalPriceValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:textSize="18sp"/>
...
